--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -7,7 +7,7 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #a37871   ;
+  --primary-color: #49322e   ;
   --secondary-color: #427aa1 ;
   --accent1-color: #78e0dc;
   --accent2-color: #231c07;
@@ -18,9 +18,9 @@ Fonts are separated by a & */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #231c07;  /* headlines on a white background */ 
-  --headline-color-on-color: #a37871; /* he adlines on a colored background */ 
+  --headline-color-on-color: #49322e; /* he adlines on a colored background */ 
   --paragraph-color-on-white: #231c07; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #427aa1; /* paragraph text on a colored background */ 
+  --paragraph-color-on-color: #ffffff; /* paragraph text on a colored background */ 
   --paragraph-background-color: #396E94  ;
   --nav-link-color: #427aa1;
   --nav-background-color: #78e0dc;
