Week2 Upload Plan

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -10,7 +10,7 @@ Fonts are separated by a & */
   --primary-color: #49322e   ;
   --secondary-color: #427aa1 ;
   --accent1-color: #78e0dc;
-  --accent2-color: #231c07;
+  --accent2-color: #201a06;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Roberto, Helvetica, sans-serif";
