--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -7,10 +7,10 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #49322e   ;
-  --secondary-color: #427aa1 ;
-  --accent1-color: #78e0dc;
-  --accent2-color: #201a06;
+  --primary-color: #9D7462   ;
+  --secondary-color: #9D9162 ;
+  --accent1-color: #9D626E;
+  --accent2-color: #9B7064;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Roberto, Helvetica, sans-serif";
@@ -18,12 +18,12 @@ Fonts are separated by a & */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #231c07;  /* headlines on a white background */ 
-  --headline-color-on-color: #49322e; /* he adlines on a colored background */ 
+  --headline-color-on-color: #bebcbc; /* he adlines on a colored background */ 
   --paragraph-color-on-white: #231c07; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #ffffff; /* paragraph text on a colored background */ 
   --paragraph-background-color: #396E94  ;
-  --nav-link-color: #427aa1;
-  --nav-background-color: #78e0dc;
+  --nav-link-color: #000000;
+  --nav-background-color: #358847;
   --nav-hover-link-color: white;
   --nav-hover-background-color: #396E94;
 }
