--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -7,7 +7,7 @@
     --accent2-color: #9B7064;
   
     /* change the values below to your chosen font(s) */
-    --heading-font: "Roberto, Helvetica, sans-serif";
+    --heading-font: "Roboto, Helvetica, sans-serif";
     --paragraph-font: DM Sans, Helvetica, sans-serif;
   
     /* these colors below should be chosen from among your palette colors above */
